Refactor to allow partial adding of addresses
