# api/swagger.yaml
@@ -43,7 +43,7 @@ definitions:
           $ref: "#/definitions/ErrorModel"
     required:
       - errors
-  AddressSpec:
+  AddressConfig:
     required:
       - store_and_forward
       - multicast
@@ -55,16 +55,16 @@ definitions:
       flavor:
         type: string
         
-  AddressConfig:
+  AddressConfigMap:
     type: object
     additionalProperties:
-      $ref: '#/definitions/AddressSpec'
+      $ref: '#/definitions/AddressConfig'
 paths:
   /v1/enmasse/addresses:
     get:
       description: |-
         Returns the addressing configuration for the cluster
-      operationId: getAddresses
+      operationId: listAddresses
       tags:
         - addresses
       responses:
@@ -72,25 +72,25 @@ paths:
           description: |-
             Address config response
           schema:
-            $ref: "#/definitions/AddressConfig"
+            $ref: "#/definitions/AddressConfigMap"
         default:
           description: |-
             Unexpected error
           schema:
             $ref: "#/definitions/ErrorResponse"
-    put:
+    post:
       description: |-
-        Update address config
-      operationId: putAddresses
+        Create address config
+      operationId: createAddress
       tags:
         - addresses
       parameters:
-        - name: addressConfig
+        - name: addressConfigMap
           in: body
-          description: AddressConfig to set
+          description: AddressConfig to create
           required: true
           schema:
-            $ref: "#/definitions/AddressConfig"
+            $ref: "#/definitions/AddressConfigMap"
       responses:
         "201":
           description: |-
@@ -101,7 +101,7 @@ paths:
                 The address config that was deployed
               type: string
           schema:
-            $ref: "#/definitions/AddressConfig"
+            $ref: "#/definitions/AddressConfigMap"
         default:
           description: |-
             Unexpected error
