# models/address_config_map.go
@@ -1,0 +1,29 @@
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/validate"
+)
+
+// AddressConfigMap address config map
+// swagger:model AddressConfigMap
+type AddressConfigMap map[string]AddressConfig
+
+// Validate validates this address config map
+func (m AddressConfigMap) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := validate.Required("", "body", AddressConfigMap(m)); err != nil {
+		return err
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
