# restapi/operations/addresses/create_address_responses.go
@@ -1,0 +1,125 @@
+package addresses
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/EnMasseProject/enmasse-rest/models"
+)
+
+/*CreateAddressCreated Address config response
+
+swagger:response createAddressCreated
+*/
+type CreateAddressCreated struct {
+	/*The address config that was deployed
+	  Required: true
+	*/
+	Location string `json:"Location"`
+
+	// In: body
+	Payload models.AddressConfigMap `json:"body,omitempty"`
+}
+
+// NewCreateAddressCreated creates CreateAddressCreated with default headers values
+func NewCreateAddressCreated() *CreateAddressCreated {
+	return &CreateAddressCreated{}
+}
+
+// WithLocation adds the location to the create address created response
+func (o *CreateAddressCreated) WithLocation(location string) *CreateAddressCreated {
+	o.Location = location
+	return o
+}
+
+// SetLocation sets the location to the create address created response
+func (o *CreateAddressCreated) SetLocation(location string) {
+	o.Location = location
+}
+
+// WithPayload adds the payload to the create address created response
+func (o *CreateAddressCreated) WithPayload(payload models.AddressConfigMap) *CreateAddressCreated {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create address created response
+func (o *CreateAddressCreated) SetPayload(payload models.AddressConfigMap) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateAddressCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header Location
+
+	location := o.Location
+	if location != "" {
+		rw.Header().Set("Location", location)
+	}
+
+	rw.WriteHeader(201)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*CreateAddressDefault Unexpected error
+
+swagger:response createAddressDefault
+*/
+type CreateAddressDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewCreateAddressDefault creates CreateAddressDefault with default headers values
+func NewCreateAddressDefault(code int) *CreateAddressDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &CreateAddressDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the create address default response
+func (o *CreateAddressDefault) WithStatusCode(code int) *CreateAddressDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the create address default response
+func (o *CreateAddressDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the create address default response
+func (o *CreateAddressDefault) WithPayload(payload *models.ErrorResponse) *CreateAddressDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the create address default response
+func (o *CreateAddressDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *CreateAddressDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
