# restapi/operations/addresses/get_addresses_responses.go
@@ -1,103 +1,0 @@
-package addresses
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	"github.com/EnMasseProject/enmasse-rest/models"
-)
-
-/*GetAddressesOK Address config response
-
-swagger:response getAddressesOK
-*/
-type GetAddressesOK struct {
-
-	// In: body
-	Payload models.AddressConfig `json:"body,omitempty"`
-}
-
-// NewGetAddressesOK creates GetAddressesOK with default headers values
-func NewGetAddressesOK() *GetAddressesOK {
-	return &GetAddressesOK{}
-}
-
-// WithPayload adds the payload to the get addresses o k response
-func (o *GetAddressesOK) WithPayload(payload models.AddressConfig) *GetAddressesOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get addresses o k response
-func (o *GetAddressesOK) SetPayload(payload models.AddressConfig) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetAddressesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	if err := producer.Produce(rw, o.Payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
-
-/*GetAddressesDefault Unexpected error
-
-swagger:response getAddressesDefault
-*/
-type GetAddressesDefault struct {
-	_statusCode int
-
-	// In: body
-	Payload *models.ErrorResponse `json:"body,omitempty"`
-}
-
-// NewGetAddressesDefault creates GetAddressesDefault with default headers values
-func NewGetAddressesDefault(code int) *GetAddressesDefault {
-	if code <= 0 {
-		code = 500
-	}
-
-	return &GetAddressesDefault{
-		_statusCode: code,
-	}
-}
-
-// WithStatusCode adds the status to the get addresses default response
-func (o *GetAddressesDefault) WithStatusCode(code int) *GetAddressesDefault {
-	o._statusCode = code
-	return o
-}
-
-// SetStatusCode sets the status to the get addresses default response
-func (o *GetAddressesDefault) SetStatusCode(code int) {
-	o._statusCode = code
-}
-
-// WithPayload adds the payload to the get addresses default response
-func (o *GetAddressesDefault) WithPayload(payload *models.ErrorResponse) *GetAddressesDefault {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the get addresses default response
-func (o *GetAddressesDefault) SetPayload(payload *models.ErrorResponse) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *GetAddressesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(o._statusCode)
-	if o.Payload != nil {
-		if err := producer.Produce(rw, o.Payload); err != nil {
-			panic(err) // let the recovery middleware deal with this
-		}
-	}
-}
