# restapi/operations/addresses/list_addresses_responses.go
@@ -1,0 +1,103 @@
+package addresses
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/EnMasseProject/enmasse-rest/models"
+)
+
+/*ListAddressesOK Address config response
+
+swagger:response listAddressesOK
+*/
+type ListAddressesOK struct {
+
+	// In: body
+	Payload models.AddressConfigMap `json:"body,omitempty"`
+}
+
+// NewListAddressesOK creates ListAddressesOK with default headers values
+func NewListAddressesOK() *ListAddressesOK {
+	return &ListAddressesOK{}
+}
+
+// WithPayload adds the payload to the list addresses o k response
+func (o *ListAddressesOK) WithPayload(payload models.AddressConfigMap) *ListAddressesOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list addresses o k response
+func (o *ListAddressesOK) SetPayload(payload models.AddressConfigMap) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListAddressesOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if err := producer.Produce(rw, o.Payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+/*ListAddressesDefault Unexpected error
+
+swagger:response listAddressesDefault
+*/
+type ListAddressesDefault struct {
+	_statusCode int
+
+	// In: body
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewListAddressesDefault creates ListAddressesDefault with default headers values
+func NewListAddressesDefault(code int) *ListAddressesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &ListAddressesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the list addresses default response
+func (o *ListAddressesDefault) WithStatusCode(code int) *ListAddressesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the list addresses default response
+func (o *ListAddressesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the list addresses default response
+func (o *ListAddressesDefault) WithPayload(payload *models.ErrorResponse) *ListAddressesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list addresses default response
+func (o *ListAddressesDefault) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListAddressesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		if err := producer.Produce(rw, o.Payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
